examples/test/testpolicy7676.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7676
  namespace: namespace408
spec:
  podSelector:
    matchLabels:
      key36: value46
      key37: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value8
          key46: value1
          key29: value20
      podSelector:
        matchLabels:
          key43: value36
